--- a/src/Week13/index.html
+++ b/src/Week13/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
 
+
+    <!-- 023 -->
+    <h3 id="counter">100</h3>
+    <button id="increase">Arttır</button>
+    <button id="decrease">Azalt</button>
+
+
+
+
     <!-- 012 -->
     <!-- <ul id="list">
         <li>Lorem.</li>
@@ -26,6 +35,6 @@
             <a href="#" id="kodluyoruzLink">Link</a>
         </li>
     </ul> -->
-    <script src="js/012-liste-icindeki-ogeye-ulasmak-yeni-oge-eklemek.js"></script>
+    <script src="js/023-functions-bolum-sonu-egzersizi.js"></script>
 </body>
 </html>
